--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,9 +8,12 @@ jobs:
     strategy:
       matrix:
         os: [macos-latest, ubuntu-latest]
+        swift: ["5.1.0"]
     runs-on: ${{ matrix.os }}
     steps:
-    - uses: actions/checkout@v2
+    - uses: fwal/setup-swift@master
+      with:
+        swift-version: ${{ matrix.swift }}
     - name: Build
       run: swift build -v
     - name: Tests
