--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,11 +18,11 @@ jobs:
     - name: Checkout
       uses: actions/checkout@v1
     - name: Version
-      uses: swift --version
+      run: swift --version
     - name: Build
-      uses: swift build -v -c debug
+      run: swift build -v -c debug
     - name: Test
-      uses: swift test -v -c debug
+      run: swift test -v -c debug
 
   macos:
     name: macOS
@@ -31,8 +31,8 @@ jobs:
     - name: Checkout
       uses: actions/checkout@v1
     - name: Version
-      uses: swift --version
+      run: swift --version
     - name: Build
-      uses: swift build -v -c debug
+      run: swift build -v -c debug
     - name: Test
-      uses: swift test -v -c debug
+      run: swift test -v -c debug
