--- a/.github/workflows/validate_api.yml
+++ b/.github/workflows/validate_api.yml
@@ -6,7 +6,7 @@ on:
 
 jobs:
   validate_API_responses:
-    runs-on: macos-latest
+    runs-on: macos-15
     steps:
     - uses: actions/checkout@v2
     - name: Run APITests
